--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,24 @@
     width: 100%;
     object-fit: cover;
 } */
+
+
+nav{
+    background-color: #cb0000;
+    
+} 
+
 body{
-    background-color:#FFDB5C;
+    background-color: #f1f1f2;
 }
 
 .card{
-    background: #FFEC5C;
+    background: #ffeb94;
 }
+
+
+
+
 
 
 
